plugins {
    id "net.neoforged.moddev" version "2.0.141"
    id "maven-publish"
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
    maven {
        name = "BlameJared Maven"
        url = "https://maven.blamejared.com"
    }
}

neoForge {
    version = project.neo_version

    parchment {
        minecraftVersion = project.parchment_minecraft_version
        mappingsVersion = project.parchment_mappings_version
    }

    runs {
        client {
            client()
            gameDirectory = file(providers.gradleProperty("vector_regnum_client_game_dir")
                    .orElse("run/client").get())
            programArguments.addAll("--quickPlayMultiplayer", "127.0.0.1:25575")
        }
        server {
            server()
            gameDirectory = file(providers.gradleProperty("vector_regnum_server_game_dir")
                    .orElse("run/server").get())
        }
        // Phase 10 needs a runner that yields a real process exit code. Standing
        // it up here means phase 10 ports tests instead of building harnesses.
        gameTestServer {
            type = "gameTestServer"
            gameDirectory = file("run/gametest")
        }
    }

    mods {
        "vector_regnum" {
            sourceSet sourceSets.main
        }
    }

    // Some loader-neutral classes use libraries that ship with Minecraft, such
    // as DataFixerUpper codecs and gson. Without this the test compile classpath
    // lacks them even though the main classpath has them.
    unitTest {
        enable()
        testedMod = mods."vector_regnum"
    }
}

dependencies {
    def veilDependency = "foundry.veil:veil-neoforge-${project.minecraft_version}:${project.veil_version}"
    compileOnly(veilDependency)
    if (providers.gradleProperty("vector_regnum_enable_veil").orElse("false").get().toBoolean()) {
        runtimeOnly(veilDependency)
    }

    testImplementation platform("org.junit:junit-bom:5.11.4")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

processResources {
    def props = [version: project.version,
                 minecraft_version_range: project.minecraft_version_range,
                 neo_version_range: project.neo_version_range,
                 loader_version_range: project.loader_version_range,
                 veil_version: project.veil_version]
    inputs.properties props
    filesMatching("META-INF/neoforge.mods.toml") {
        expand props
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }
}
